added blog back

--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,20 @@
 # Dependencies
-markdown:         redcarpet
-pygments:         true
+
+highlighter:      true
 
 # Permalinks
 permalink:        pretty
 
 # Setup
 title:            Mark Innes
-tagline:          'Dinosaur Supporter'
-description:      'Suppose I should have a website...'
+tagline:          'Digital expert'
+description:      'Digital marketing expert from Aberdeen'
 url:              http://markinnes.co.uk
 baseurl:          '/'
 paginate:         5
+gems:             
+                - jekyll-sitemap
+                - jekyll-paginate
 
 author:
   name:           'Mark Innes'
