--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 
 # Setup
 title:            Mark Innes
-tagline:          'Digital expert'
-description:      'Digital marketing expert from Aberdeen'
+tagline:          'Web Developer'
+description:      ''
 url:              http://markinnes.co.uk
 baseurl:          '/'
 paginate:         5
@@ -21,7 +21,7 @@ author:
   url:            https://twitter.com/innesm4
 
 # Custom vars
-version:          1.0.0
+version:          1.1.0
 
 github:
   repo:           https://github.com/innesm4/innesm4.github.io
